--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Learning_project</string>
     <string name="test_text">test text</string>
-    <string name="clike">clike</string>
+    <string name="click">click</string>
 </resources>
