--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,7 @@
 <resources>
     <string name="app_name">Learning_project</string>
     <string name="test_text">test text</string>
+    <style name="dev_name">Ali Habibi</style>
     <string name="click">click</string>
     <string name="todo">TODO</string>
-    <string name="list">List</string>
-    <string name="delete">delete</string>
-    <string name="add">add</string>
-    <string name="share">share</string>
-    <string name="insert_contact">Insert Contact</string>
-    <string name="send_email">Send Email</string>
-    <string name="search_in_web">Search in Web</string>
-    <string name="open_web_page">Open Web Page</string>
-    <string name="open_setting">Open Setting</string>
-    <string name="dial_phone_number">Dial Phone Number</string>
-    <string name="share_text">Share Text</string>
 </resources>
