--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <style name="dev_name">Ali Habibi</style>
     <string name="click">click</string>
     <string name="todo">TODO</string>
+    <string name="play">play</string>
+    <string name="pause">pause</string>
+    <string name="stop">stop</string>
 </resources>
