Simple List View

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,14 @@
     <string name="click">click</string>
     <string name="app_name">Learning_project</string>
     <string name="test_text">test text</string>
+
     <style name="dev_name">Ali Habibi</style>
+
     <string name="name">Name</string>
     <string name="change_language">Change Language</string>
     <!-- Navigation Drawer Open and Close -->
     <string name="nav_open">Open</string>
     <string name="nav_close">Close</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
